gobmkida/c3/result_to_string
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/result_to_string/src/engine/printutils.c:859:27: error: use of undeclared identifier 'off_4A8690'
return ( const char *)*( &off_4A8690 + result); 
                          ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/result_to_string/src/obj/1/printutils.o] Error 1
